BrainSqueezes_UI/src/styles.scss
.cursor {
    cursor: pointer;
}

.overflowAuto {
    overflow: auto;
}

.themeColor {
    color: #10DDB8;
}

.themebgColor {
    background: #10DDB8 !important;
}

.floatLeft {
    float: left;
}

.floatright {
    float: right;
}

// login and register page styles -- start

form.user {

    .custom-checkbox.small {
        label {
            line-height: 1.5rem;
        }
    }

    .form-control-user {
        font-size: 0.85rem;
        //border-radius: 10rem;
        padding: 1rem 1rem;
    }

    .btn-user {
        font-size: 0.9rem;
        //border-radius: 10rem;
        padding: 0.75rem 1rem;
    }

}

form.register {
    width: 89%;
    margin-left: 60px;

    .forget-password {
        width: 70%;
        top: 88%;
        position: absolute;
        left: 27%;
    }
}

.user-icon {
    position: absolute;
    left: 50%;
    top: 19%;
    width: 30px;
}

.password-icon {
    position: absolute;
    left: 50%;
    top: 35%;
    width: 30px;
}

.login-btn {
    width: 100%;
    font-weight: 500;
}

// login and register page styles -- end


/* BASE TEMPLATE CSS */
#wrapper {
    display: flex;
}

#wrapper #content-wrapper {
    background-color: #f8f9fc;
    width: 100%;
    overflow-x: hidden;
}

#wrapper #content-wrapper #content {
    flex: 1 0 auto;
}

/** SIDEBAR */

.sidebar #sidebarToggle { //
    width: 2.5rem;
    height: 2.5rem;
    text-align: center;
    margin-bottom: 1rem;
    cursor: pointer;
}

.sidebar #sidebarToggle::after { //
    font-weight: 900;
    content: '< >';
    font-family: 'Font Awesome 5 Pro';
    margin-right: 0.1rem;
}

.sidebar .sidebar-brand { //
    height: 4.375rem;
    text-decoration: none;
    font-size: 1rem;
    font-weight: 800;
    padding: 1.5rem 1rem;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.05rem;
    z-index: 1;
}

.sidebar .sidebar-brand .sidebar-brand-icon-a img {
    //
    width: 35px;
    left: 10px;
    position: absolute;
    top: 20px;
}

.sidebar .sidebar-brand .sidebar-brand-icon-a span { //
    top: 25px;
    left: 50px;
    position: absolute;
    font-size: 17px;
}

.sidebar .sidebar-brand .sidebar-brand-icon-b img {
    //
    font-size: 2rem;
    width: 50px;
}

.sidebar .sidebar-brand-icon-b {
    //
    display: none;
}

.sidebar.toggled .sidebar-brand-icon-a {
    //
    display: none;
}

.sidebar.toggled .sidebar-brand-icon-b { //
    display: block;
}

.sidebar hr.sidebar-divider { //
    margin: 2px 1rem 1rem;
}

@media (max-width: 768px) {
    .sidebar .sidebar-brand-icon-a {
        display: none;
    }

    .sidebar .sidebar-brand-icon-b {
        display: inline;
    }
}

@media (min-width: 768px) {
    .sidebar {
        width: 14rem !important;
    }

    .sidebar .nav-item .collapse {
        position: relative;
        left: 0;
        z-index: 1;
        top: 0;
        -webkit-animation: none;
        animation: none;
    }

    .sidebar .nav-item .collapse .collapse-inner {
        border-radius: 0;
        box-shadow: none;
    }

    .sidebar .nav-item .collapsing {
        display: block;
        transition: height 0.15s ease;
    }

    .sidebar .nav-item .collapse,
    .sidebar .nav-item .collapsing {
        margin: 0 1rem;
    }

    .sidebar .nav-item .nav-link {
        //
        display: block;
        width: 100%;
        text-align: left;
        width: 14rem;
    }
    .sidebar .nav-item .nav-link span {
        //
        font-size: 1.4rem;
        display: inline;
    }

    .sidebar .nav-item img {
        //
        width: 35px;
        float: left;
        margin: 7px 8px 7px 16px;
    }

    .sidebar.toggled {
        //
        overflow: visible;
        width: 4.5rem !important;
    }
}

.sidebar-bright .sidebar-brand {
    //
    color: #fff;
}

.sidebar-bright hr.sidebar-divider {
    //
    border-top: 2px solid rgba(255, 255, 255);
}

.sidebar-bright .nav-item .nav-link {
    //
    color: #fff;
}

.sidebar-bright #sidebarToggle {
    background-color: white;
}

/* SIDEBAR */

.color-red {
    color: red !important;
}

.ulmenu {
    max-height: 145px;
    overflow-y: scroll;
}

ul.dropdown-menu a:hover{
    color: #fff;
    border-color: #fff;
    background: #10DDB8 !important;
}

.dotted-line {
    border: none;
    border-top: 3px dashed;
}

.accordian {
    border: 10px solid #D9D9D9 !important;
    padding: 5px 10px;
    border-radius: 4px;
}

